# remotely

./: .travis.yml  CHANGELOG.md  README.md  remotely.cabal  stack.yaml
app/: remotely-sender.hs  remotely-stub.hs
src/: Remotely.hs
